fixed responsive form bug on small mobile devices

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -52,9 +52,9 @@
     form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 10px;
       @include mixins.mobile {
-        padding: 30px;
+        padding-bottom: 2rem;
         width: 100%;
       }
 
